# graduate_work

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  requirements-ci.txt  ruff.toml
.github/workflows/: build.yml  run_tests.yml
billing_api/: .dockerignore  .env.example  Dockerfile  celery.Dockerfile  celery_beat.Dockerfile  pyproject.toml  requirements.txt
billing_api/src/: .env.example  alembic.ini  fill_test_data.py  main.py  run_auth_worker.py  run_notification_worker.py
billing_api/src/api/: jwt_access_token.py  utils.py
billing_api/src/api/v1/: admin.py  billing.py  subscription.py  subscription_plan.py  transaction.py  utils.py
billing_api/src/api/v1/admin/: __init__.py  admin_routes.py  subscription.py  subscription_plan.py  transaction.py  transactions.py  user_cards.py
billing_api/src/core/: config.py
billing_api/src/db/: postgres.py  rabbitmq.py
billing_api/src/migrations/: env.py
billing_api/src/migrations/versions/: 2024_11_19_1916-fd008e24ca06_add_subscription_and_subscriptionplan.py  2024_11_19_1939-19a220bb1d45_add_subscription_and_subscriptionplan.py  2024_11_22_0853-92e71bbd1b27_add_subscription_and_subscriptionplan.py  2024_11_22_1931-d753678ac137_add_user_cards.py  2024_11_23_0753-f2214574000e_add_is_default_card.py  2024_11_23_2140-66e2cb6f9f1e_add_transaction.py  2024_12_01_1628-fd563f5cc6ff_add_archive_field_to_subscriptionplan.py  2024_12_02_1407-6c8b90e219a8_add_is_archive_feild_to_subscriptionplan.py  2024_12_03_2101-8859ae0f173e_headmsg.py  2024_12_03_2101-8859ae0f173e_set_nullable_for_stripe_payment_intent_id.py  2fc2ff787132_init.py  4255cd236516_user_cards.py
billing_api/src/models/: enums.py  models.py  user_cards.py
billing_api/src/schemas/: admin.py  base.py  subscription.py  subscription_plan.py  transaction.py  user_card.py
billing_api/src/services/: admin.py  base.py  cards_manager.py  exceptions.py  payment_process.py  payment_webhook_manager.py  subscration_manager.py  subscription.py  subscription_manager.py  subscription_plan.py  transaction.py
billing_api/src/static/: style.css
billing_api/src/tasks/: check_subscriptions.py  check_subscriptons.py
billing_api/src/templates/: checkout-session.html  success_redirect.html
billing_api/src/tests/: .env.example  conftest.py  docker-compose.yaml  settings.py
billing_api/src/tests/config/: settings.py
billing_api/src/tests/fixtures/: subscription.py  subscription_plan.py  transaction.py  users.py
billing_api/src/tests/functional/: cards_test.py  subscription_plan_test.py  subscription_test.py
billing_api/src/tests/functional/admin/: admin_subscription_plan_test.py  admin_subscriptions.py  admin_transaction.py  admin_user_cards.py
billing_api/src/utils/: circuit_breaker.py
billing_api/src/workers/: auth.py  base.py  celery.py  exceptions.py  notification.py
nginx/: site.conf
