[tool.poetry]
name = "billing_api"
version = "0.1.0"
description = ""
authors = ["Yandex C35 Team 6"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
fastapi-pagination = "^0.12.26"
pydantic-settings = "^2.3.4"
SQLAlchemy = "^2.0.36"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.0.1"

[tool.poetry.group.lint.dependencies]
ruff = "0.7.4"
mypy = "1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # blind exceprt
    "BLE",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    # pycodestyle
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

lint.ignore = [
    # AmbiguousUnicodeCharacterString
    "RUF001",
    # ambiguous-unicode-character-docstring
    "RUF002",
    # ambiguous-unicode-character-comment
    "RUF003",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # function-call-in-default-argument
    "B008",
]

[tool.ruff.lint.mccabe]
max-complexity = 45

[tool.mypy]
python_version = "3.11"
pretty = true
ignore_missing_imports = false
warn_redundant_casts = true
strict_optional = true
