[tool.poetry]
name = "billing_api"
version = "0.1.0"
description = ""
authors = ["Yandex C35 Team 6"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
fastapi-pagination = "^0.12.26"
pydantic-settings = "^2.3.4"
SQLAlchemy = "^2.0.36"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.0.1"
stripe = "^11.2.0"
alembic-postgresql-enum = "^1.4.0"
orjson = "^3.10.11"
greenlet = "^3.1.1"

[tool.poetry.group.lint.dependencies]
ruff = "0.7.4"
mypy = "1.13.0"
pre-commit = "^4.0.1"
types-stripe = "^3.5.2.20240106"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # blind exceprt
    "BLE",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    # pycodestyle
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

ignore = [
    # AmbiguousUnicodeCharacterString
    "RUF001",
    # ambiguous-unicode-character-docstring
    "RUF002",
    # ambiguous-unicode-character-comment
    "RUF003",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # function-call-in-default-argument
    "B008",
    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S311",
    # assert detected
    "S101"
]

[tool.ruff.lint.mccabe]
max-complexity = 45

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-local-folder = ["src"]
split-on-trailing-comma = false


[tool.mypy]
python_version = "3.11"
pretty = true
ignore_missing_imports = false
warn_redundant_casts = true
strict_optional = true
explicit_package_bases = true
mypy_path = "src"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Please use `import python_multipart` instead",
    "ignore:Support for class-based `config` is deprecated, use ConfigDict instead",

]
